--- a/front/app/angular.json
+++ b/front/app/angular.json
@@ -18,16 +18,13 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": [],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
@@ -93,7 +90,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "/node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           }
